# win32tools

./: CMakeLists.txt  CMakeSettings.json  README.md  win32toolsConfig.cmake.in
Demo/: main.cpp
include/win32tools/Network/: IocpBase.hpp  IocpTcpClient.hpp  IocpTcpServer.hpp  IocpUdpClient.hpp  IocpUdpServer.hpp  NamedPipe.hpp  NetworkSocket.hpp  Packet.hpp  Socket.hpp  legacy_IocpTcpServer.hpp  legacy_NamedPipe.hpp  legacy_NetworkSocket.hpp  legacy_Packet.hpp  legacy_Socket.hpp
include/win32tools/Tools/: Core.hpp  DriveInfo.hpp  HaxHelper.hpp  Inject.hpp  Scanner.hpp
src/Network/: IocpTcpClient.cpp  IocpTcpServer.cpp  IocpUdpClient.cpp  IocpUdpServer.cpp  NamedPipe.cpp  NetworkSocket.cpp  Packet.cpp  Socket.cpp  legacy_IocpTcpServer.cpp  legacy_NamedPipe.cpp  legacy_NetworkSocket.cpp  legacy_Packet.cpp  legacy_Socket.cpp
src/Tools/: Core.cpp  DriveInfo.cpp  HaxHelper.cpp  Inject.cpp  Scanner.cpp  misc.txt
